# service/api/api-comments.go
@@ -2,6 +2,7 @@ package api
 
 import (
 	"encoding/json"
+	"fmt"
 	"net/http"
 
 	"github.com/aleiis/WASAPhoto/service/api/reqcontext"
@@ -10,6 +11,11 @@ import (
 
 type Comment struct {
 	Owner   int64  `json:"owner"`
+	Content string `json:"content"`
+}
+
+type ResolvedComment struct {
+	User    string `json:"user"`
 	Content string `json:"content"`
 }
 
@@ -27,6 +33,7 @@ func (rt *_router) commentPhotoHandler(w http.ResponseWriter, r *http.Request, p
 	// Decode the user ID of comment owner and the content of the comment from the body of the request
 	var comment Comment
 	if err := json.NewDecoder(r.Body).Decode(&comment); err != nil {
+		fmt.Println(err)
 		w.WriteHeader(http.StatusBadRequest)
 		return
 	}
@@ -118,4 +125,75 @@ func (rt *_router) uncommentPhotoHandler(w http.ResponseWriter, r *http.Request,
 	}
 
 	w.WriteHeader(200)
+}
+
+func (rt *_router) getCommentsHandler(w http.ResponseWriter, r *http.Request, ps httprouter.Params, ctx reqcontext.RequestContext) {
+
+	// Get the parameters
+	var ownerId, photoId int64
+	if params, err := checkIds(ps.ByName("userId"), ps.ByName("photoId")); err != nil {
+		w.WriteHeader(http.StatusBadRequest)
+		return
+	} else {
+		ownerId, photoId = params[0], params[1]
+	}
+
+	// Check if the user requesting the profile is not banned by the user whose profile is being requested
+	// The check is made using the Authorization header
+	requesterId, err := getUserIdFromBearer(r.Header.Get("Authorization"))
+	if err != nil {
+		w.WriteHeader(http.StatusUnauthorized)
+		return
+	}
+	banCheck, err := rt.db.BanExists(ownerId, requesterId)
+	if err != nil {
+		ctx.Logger.WithError(err).Error("can't check if the user is banned")
+		w.WriteHeader(http.StatusInternalServerError)
+		return
+	} else if banCheck {
+		w.WriteHeader(http.StatusForbidden)
+		return
+	}
+
+	// Check if the photo exists
+	if exists, err := rt.db.PhotoExists(ownerId, photoId); err != nil {
+		ctx.Logger.WithError(err).Error("can't check if the photo exists")
+		w.WriteHeader(http.StatusInternalServerError)
+		return
+	} else if !exists {
+		w.WriteHeader(http.StatusNotFound)
+		return
+	}
+
+	// Try to get the comments of the photo
+	comments, err := rt.db.GetComments(ownerId, photoId)
+	if err != nil {
+		ctx.Logger.WithError(err).Error("can't get the comments of the photo")
+		w.WriteHeader(http.StatusInternalServerError)
+		return
+	}
+
+	var resolvedComments []ResolvedComment
+	resolvedComments = make([]ResolvedComment, len(comments))
+	for i, comment := range comments {
+		user, err := rt.db.GetUsername(comment.Owner)
+		if err != nil {
+			ctx.Logger.WithError(err).Error("can't get resolve the user of a comment")
+			w.WriteHeader(http.StatusInternalServerError)
+			return
+		}
+		resolvedComments[i] = ResolvedComment{
+			User:    user,
+			Content: comment.Content,
+		}
+	}
+
+	w.Header().Set("Content-Type", "application/json")
+	w.WriteHeader(200)
+	err = json.NewEncoder(w).Encode(resolvedComments)
+	if err != nil {
+		ctx.Logger.WithError(err).Error("can't encode the comments")
+		w.WriteHeader(http.StatusInternalServerError)
+		return
+	}
 }
